# micmac

./: .gitignore  CMakeLists.txt  README  pom.xml  precompiled_headers.cmake
CodeExterne/ANN/: CMakeLists.txt
CodeExterne/ANN/src/: kd_pr_search.cpp
CodeExterne/Poisson/: CMakeLists.txt  Sources.cmake
CodeExterne/Poisson/include/: BSplineData.h  CmdLineParser.h  Factor.h  Geometry.h  Hash.h  MAT.h  MemoryUsage.h  MultiGridOctreeData.h  Octree.h  PPolynomial.h  PTime.h  Ply.h  PlyFile.h  PointStream.h  Polynomial.h  SparseMatrix.h  Vector.h
CodeExterne/Poisson/src/: BSplineData.inl  Geometry.inl  MarchingCubes.cpp  MultiGridOctreeData.IsoSurface.inl  MultiGridOctreeData.SortedTreeNodes.inl  MultiGridOctreeData.inl  PTime.cpp  PlyFile.cpp  PointStream.inl  PoissonRecon.cpp  Polynomial.inl  SparseMatrix.inl  SurfaceTrimmer.cpp
doc/: Doxyfile  (+1 more)
src/: CMakeLists.txt  GpGpu.cmake  StdAfx.cpp
src/AMD/: amd_demo_1.cpp
src/CBinaires/: CMakeLists.txt
src/EtalonnagePolygone/lib/: SauvParam.cpp  cBlockEtal.cpp  cCibleRechImage.cpp  cCpleCamEtal.cpp  cEtalonnage.cpp  cHypDetectCible.cpp
src/HassanArrangt/: cElHJaArrangt.cpp  cElHJaFacette.cpp  cFullSubGrWithP.cpp
src/SAN/: CMakeLists.txt  cylindre.cpp  ortho_cyl.cpp  torique.cpp
src/SamplesLibElise/: CPP_LSQMain.cpp  CPP_LucasModifNuage.cpp  CPP_RAW_test.cpp  CPP_Test0LucGirod.cpp  CPP_TestAbdou.cpp  CPP_Windows0Main.cpp  Sources.cmake
src/TpMMPD/: BufferImage_code.h  ExoMM_CorrelMulImage.cpp  ExoMM_SimulTieP.cpp  cTD_Epip.cpp
src/algo_speciaux/: FiltreDepthMaps.cpp  deriche.cpp  hongrois.cpp
src/api/: vecto_hough.cpp  vecto_skel.cpp
src/bitm/: flx_out_im2.cpp  im2d_bits.cpp  im2d_reech_grid.cpp  im2d_tpl.cpp  im_compr.cpp  lpts.cpp  matrix.cpp  pj_eq234.cpp  polyn2DReel.cpp  polynome.cpp  real_poly.cpp  scale_im_compr.cpp
src/compression/: huffman.cpp  lzw.cpp  pack_bits.cpp
src/doc_ex/: introfiltr.cpp
src/file_image/: bmp.cpp  elise_format.cpp  fich_2d_gen.cpp  gif.cpp  pnm.cpp  tga.cpp
src/flux_pts/: curser_pack_pts.cpp  flx_gen_tpl.cpp  flx_general.cpp  flx_oper.cpp  front_to_surf.cpp  lineique_2d.cpp  rle_pack.cpp  surf_geom_2d.cpp
src/fonc_num/: fnum_compile.cpp  fnum_general.cpp  linear_filter.cpp  linear_proj.cpp
src/geom2d/: Shewchuk_implem.cpp  basic.cpp  dist.cpp  env_conv.cpp  gpc_interf.cpp  inter_cerle_losange.cpp  proj.cpp  triangle_comp.cpp
src/geom3d/: NuageToGrid.cpp  PbTopoNuage.cpp  cElNuage3DMaille.cpp  cImplemElNuage3DMaille.cpp  cMasq3D.cpp  cOmbrageNuage3DMaille.cpp  cZBuffer.cpp  geo3basic.cpp
src/hough/: cPtOfCorrel.cpp  hough_algo.cpp  hough_basic.cpp  hough_clip.cpp  hough_extrac_basic.cpp  hough_file.cpp  hough_filtr_seg_basic.cpp  hough_gen.cpp  hough_include.h  hough_inst_fseg.cpp  hough_merger.cpp  hough_sub_pixel.cpp
src/main/descriptors/: src.xml
src/memory/: old_smart_pointeur
src/morpho_cabl/: chamfer_dist.cpp  skel_vein.cpp
src/neighboor/: dilat_conc.cpp
src/op_buf/: opb_assoc.cpp  opb_cany.cpp  opb_chamfer.cpp  opb_chscale.cpp  opb_conc.cpp  opb_etiq.cpp  opb_fonc_a_trou.cpp  opb_general.cpp  opb_max_loc_dir.cpp  opb_ord.cpp  opb_pts_interets.cpp  opb_simple.cpp  opb_skel.cpp  opb_som_rvar.cpp
src/operator/: assoc_mixte.cpp  colour.cpp  func_opbinmix_tpl.cpp  func_opun_tpl.cpp  inst_users_op.cpp  op_bin_ndim.cpp
src/optim/: cox_roy.cpp  func_mean_square.cpp  opt_cube_flux.cpp  opt_forml1.cpp  opt_mat_creuse.cpp  opt_sysl2.cpp  opt_syssuresolu.cpp  optim_etiq_binaire.cpp
src/ori_phot/: astro.cpp  cOriMntCarto.cpp  elise_interface.cpp  orilib.cpp
src/output/: oper.cpp  out_general.cpp
src/photogram/: ChantierNameAssoc.cpp  cCameraBilin.cpp  phgr_autocalibr.cpp  phgr_basic.cpp  phgr_cEqObsRotVect.cpp  phgr_correl_subpix.cpp  phgr_dist.cpp  phgr_epip_cam.cpp  phgr_epipole.cpp  phgr_eqhomog.cpp  phgr_extrinseque.cpp  phgr_formel.cpp  phgr_homog.cpp  phgr_inconnue_tmp.cpp  phgr_intrinseque.cpp  phgr_low_level.cpp  phgr_mep_rel.cpp  phgr_or_opt.cpp  phgr_triangul.cpp  transfo_xml_phgr.cpp  transfo_xml_phgr2.cpp
src/plotter/: draw_plot1d.cpp
src/post_script/: dxf.cpp  iocomp.cpp  prim_graph.cpp  win_bitm.cpp
src/radiom/: egal_radiom.cpp
src/recipes/: refft.cpp  regaussj.cpp  rejacobi.cpp  resparse.cpp
src/saisieQT/: CMakeLists.txt  Cloud.cpp  Data.cpp  Engine.cpp  FindWindowsSDK.txt  GLWidget.cpp  saisieQT_window.cpp
src/saisieQT/include_QT/: Cloud.h  Data.h  Engine.h  GLWidget.h  saisieQT_window.h
src/saisieQT/main/: saisieQT_main.cpp
src/tiff/: tiff_header.cpp  tiff_nc_tiles.cpp  tiff_pckbit_un_load.cpp  tiff_tags.cpp
src/top_level/: copy.cpp
src/uti_files/: CPP_Apero2Meshlab.cpp  CPP_Apero2PMVS.cpp  CPP_CheckChantier.cpp  CPP_Ori_txt2Xml.cpp  CPP_TestCmds.cpp  CPP_TestKeys.cpp  Sources.cmake
src/uti_image/: Arsenic.h  CPP_Ann.cpp  CPP_Arsenic.cpp  CPP_CalSzWCor.cpp  CPP_CamLightCorrec.cpp  CPP_CoherEpi.cpp  CPP_DevVideo.cpp  CPP_Digeo.cpp  CPP_EstimFlatField.cpp  CPP_GrShade.cpp  CPP_Impainting.cpp  CPP_LumRas.cpp  CPP_MPDtest.cpp  CPP_MakePlancheImage.cpp  CPP_Sift.cpp  CPP_StatImage.cpp  CPP_Vignette.cpp  CPP_to8Bits.cpp  OLD-CPP_MPDtest.cpp  QualDepthMap.cpp  Sources.cmake
src/uti_phgrm/: CPP_CenterBascule.cpp  CPP_CmpCalib.cpp  CPP_CreateEpip.cpp  CPP_GrapheHom.cpp  CPP_Liquor.cpp  CPP_MMByPair.cpp  CPP_MMHomCorOri.cpp  CPP_MMModelInitial.cpp  CPP_MMOnePair.cpp  CPP_MMTestOrient.cpp  CPP_Malt.cpp  CPP_Mascarpone.cpp  CPP_Nuage2Ply.cpp  CPP_NuageBascule.cpp  CPP_Pastis.cpp  CPP_Sake.cpp  CPP_Tapioca.cpp  CPP_Tawny.cpp  CPP_Tequila.cpp  CPP_TestChantier.cpp  CPP_VisuCoupeEpip.cpp  Sources.cmake
src/util/: all.cpp  arg_main.cpp  bicub.cpp  bits_flow.cpp  box.cpp  cElStatErreur.cpp  cEquiv1D.cpp  cSysCoor.cpp  externalToolHandler.cpp  fifo.cpp  files.cpp  num.cpp  num_tpl.cpp  parseline.cpp  pt2di.cpp  randomm.cpp  string_dyn.cpp  tabul.cpp  win_regex.c  xml.cpp
src/vectorize/: aprrox_poly.cpp  cont_vect.cpp  inermats.cpp
src/xinterf/: bi_scroller.cpp  bitm_win.cpp  display.cpp  fen_x11.cpp  gen_win.cpp  image_interactor.cpp  imfile_scrol.cpp  incruster.cpp  integ_out.cpp  rle_out.cpp  scroller.cpp  xcolour.cpp
(+1243 files in other folders)
